third_party/blink/renderer/core/svg/svg_path_parser_test.cc
@@ -138,6 +138,19 @@ TEST(SVGPathParserTest, Simple) {
   MALFORMED("M1,1A2,3,4,0,0,5,6 7", "M 1 1 A 2 3 4 0 0 5 6");
   VALID("M1,1A2,3,4,0,0,5,6 7,8,9,0,0,10,11",
         "M 1 1 A 2 3 4 0 0 5 6 A 7 8 9 0 0 10 11");
+
+  // Scientific notation.
+  VALID("M1e2,10e1", "M 100 100");
+  VALID("M100e0,100", "M 100 100");
+  VALID("M1e+2,1000e-1", "M 100 100");
+  VALID("M1e2.5", "M 100 0.5");
+  VALID("M0.00000001e10 100", "M 100 100");
+  VALID("M1e-46,50 h1e38", "M 0 50 h 1.00000e+38");
+  VALID("M0,50 h1e-123456789123456789123", "M 0 50 h 0");
+  MALFORMED("M0,50 h1e39", "M 0 50");
+  MALFORMED("M0,50 h1e123456789123456789123", "M 0 50");
+  MALFORMED("M0,50 h1e-.5", "M 0 50");
+  MALFORMED("M0,50 h1e+.5", "M 0 50");
 }
 
 #undef MALFORMED
